envoy-demo.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          max_request_headers_kb: 8192
          stat_prefix: ingress_http
          upgrade_configs:
          - upgrade_type: websocket
          route_config:
            name: lonsid_fusion_backend_route
            virtual_hosts:
            - name: lonsid_fusion_backend
              domains:
              - "*"
              typed_per_filter_config:
                envoy.filters.http.cors:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                  allow_origin_string_match:
                    - safe_regex:
                        regex: \*
                  allow_methods: "GET, POST, PUT, PATCH, DELETE"
                  allow_headers: "authorization, content-type, x-requestid, x-requested-with, x-signalr-user-agent"
                  allow_credentials: true
              routes:
              - name: "h5"
                match:
                  prefix: "/h5/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/"
                  cluster: h5
              - name: "h5-api"
                match:
                  prefix: "/h5/api/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/v1.0/invoke/lonsid-fusion-httpaggregator/method/api/"
                  cluster: dapr
              - name: "cdn"
                match:
                  prefix: "/cdn"
                route:
                  timeout: "0s"
                  prefix_rewrite: "/"
                  host_rewrite_literal: fusion-cdn.lonsid.cn
                  cluster: cdn
              - name: "local"
                match:
                  prefix: "/${FILENAME}"
                direct_response:
                  status: 200
                  body: 
                    inline_string: ${FILEDATA}
          http_filters:
          - name: envoy.filters.http.cors
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          access_log:
          - name: envoy.access_loggers.file
            filter:
              not_health_check_filter: {}
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              log_format: 
                json_format:
                  time: "%START_TIME%"
                  protocol: "%PROTOCOL%"
                  duration: "%DURATION%"
                  request_method: "%REQ(:METHOD)%"
                  request_host: "%REQ(HOST)%"
                  fusion_trace_context: "%REQ(X-Fusion-Trace-Context)%"
                  path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                  status: "%RESPONSE_CODE%"
                  message: "%LOCAL_REPLY_BODY%"
                  response_flags: "%RESPONSE_FLAGS%"
                  route_name: "%ROUTE_NAME%"
                  upstream_host: "%UPSTREAM_HOST%"
                  upstream_cluster: "%UPSTREAM_CLUSTER%"
                  upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%"
              path: "/dev/stdout"
    per_connection_buffer_limit_bytes: 8388608
  clusters:
  - name: dapr
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: dapr
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3500
  - name: h5
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: h5
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: lonsid-fusion-h5
                port_value: 80
  - name: cdn
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: cdn
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: fusion-cdn.lonsid.cn
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
